Removed unnecessary code and files.

--- a/views/config.haml
+++ b/views/config.haml
@@ -1,7 +1,5 @@
 %p
-  Set thresholds for the maximum number of messages in a Queue. If the number gets exceedet, a warning is displayed.
-  %br
-  %small (actually, there is nothing displayed yet ;)
+  Set thresholds for the maximum number of messages in a Queue. If the number gets exceeded, a warning is displayed.
 
 %form(method="post" action="config" class="config")
   %table
