Changed the name of the queue-related navigation links.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -21,9 +21,9 @@
           %li
             %a(href="/") Overview
           %li
-            %a(href="queues") Queues
+            %a(href="queues") Queues Detailed
           %li
-            %a(href="config") Config
+            %a(href="config") Queues Threshold
       #content
         =yield
         
