Changed the title for queue-related pages.

--- a/views/config.haml
+++ b/views/config.haml
@@ -1,3 +1,4 @@
+%h1 Queues Threshold
 %p
   Set thresholds for the maximum number of messages in a Queue. If the number gets exceeded, a warning is displayed.
 
@@ -5,9 +6,9 @@
   %table
     %tr
       %th
-        queue
+        Queue
       %th
-        threshold
+        Threshold
     -@queues.each_with_index do |queue, index|
       %tr
         %td
